2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Use the right create_dest arg to copy_directory
	
2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Free primary / secondary in run_simple_dialog

2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Add IS_IO_ERROR macro and use that
	
2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-progress-info.[ch]:
	Remove printf versions
	rename _set_foo_nocopy to _take_foo

        * libnautilus-private/nautilus-file-operations.c:
	Use new custom printf formating for all strings
	
2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Use eel_strdup_printf_with_custom to make it easier
	to create error dialogs.

2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Handle deleting a directory when overwriting it with a
	file.

2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Handle errors in remove destination
	
2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Pass cancellable into strdup_with_name

2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Add progress updates to copy.
	Make some error dialogs more consistent (add skip all, reorder)

        * libnautilus-private/nautilus-progress-info.[ch]:
	Add nautilus_progress_info_set_status_printf

2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Don't create dest dir on merges
	
2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Handle recursive copies
